[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/irongoelm-256.png" type="Texture" id=1]
[ext_resource path="res://enemies/ChaseEnemy.gd" type="Script" id=2]
[ext_resource path="res://utilities/Attachable_Tools/Hit_Box.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 68.5, 44 )

[node name="ChaseEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 4

[node name="Hit_Box" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="Hit_Box" index="0"]
position = Vector2( -4.5, 28 )
shape = SubResource( 6 )

[node name="EatTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Hit_Box" to="." method="_on_Hit_Box_body_entered"]
[connection signal="timeout" from="EatTimer" to="." method="_on_EatTimer_timeout"]

[editable path="Hit_Box"]
